# wireguard-nt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bindgen.sh
.github/workflows/: main.yml
examples/: demo_server.rs
src/: adapter.rs  lib.rs  log.rs  util.rs  wireguard_nt_raw.rs
wireguard_nt/: LICENSE.txt  README.md  wireguard.h  wireguard_functions.h
wireguard_nt/include/: wireguard.h
