[package]
name = "wireguard-nt"
version = "0.1.0"
edition = "2018"
authors = ["null.black Inc. <opensource@null.black>", "Troy Neubauer <troy@null.black>"]
repository = "https://github.com/nulldotblack/wireguard-nt"
readme = "README.md"
documentation = "https://docs.rs/wireguard-nt/"
description = "Safe idiomatic bindings to the Wireguard NT C library"
license = "MIT"
keywords = ["wireguard", "vpn", "windows"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
widestring = "0.4"
log = "0.4"
rand = "0.8"
bitflags = "1.3"

libloading = "0.7"
ipnet = "2.3"
winapi = { version = "0.3", features = ["ws2def"] }

[dev-dependencies]
env_logger = "0.9"
winapi = { version = "0.3", features = ["ws2def", "netioapi", "iptypes", "iphlpapi", "nldef"] }
base64 = "0.13"
boringtun = "0.3"
ipnet = "2.3"
