[package]
name = "wireguard-nt"
version = "0.4.0"
edition = "2021"
authors = ["null.black Inc. <opensource@null.black>", "Troy Neubauer <troy@null.black>", "Aka Han <a.akahan@gmail.com>"]
repository = "https://github.com/akahan/wireguard-nt"
readme = "README.md"
documentation = "https://docs.rs/wireguard-nt/"
description = "Safe idiomatic bindings to the Wireguard NT C library"
license = "MIT"
keywords = ["wireguard", "vpn", "windows"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
widestring = "1"
log = "0.4"
rand = "0.8"
bitflags = "2"

libloading = "0.8"
ipnet = "2.3"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Networking",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis"
]}

[dev-dependencies]
env_logger = "0.9"
base64 = "0.13"
x25519-dalek = { version = "=2.0.0-rc.3", default-features = false, features = ["static_secrets", "getrandom"] }
ipnet = "2"
