[package]
name = "wireguard-nt"
version = "0.4.0"
edition = "2018"
authors = ["null.black Inc. <opensource@null.black>", "Troy Neubauer <troy@null.black>"]
repository = "https://github.com/nulldotblack/wireguard-nt"
readme = "README.md"
documentation = "https://docs.rs/wireguard-nt/"
description = "Safe idiomatic bindings to the Wireguard NT C library"
license = "MIT"
keywords = ["wireguard", "vpn", "windows"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
bitflags = "2"
getrandom = "0.2"
ipnet = "2.3"
libloading = "0.8"
log = "0.4"
thiserror = "1.0"
widestring = "0.4"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Networking",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis"
]}

[dev-dependencies]
base64 = "0.13"
env_logger = "0.11"
ipnet = "2.3"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "getrandom"] }
